move instructorNote Components to its own package
