# servers/core/main.go
@@ -23,6 +23,7 @@ import (
 	"github.com/ls1intum/prompt2/servers/core/coursePhaseAuth"
 	"github.com/ls1intum/prompt2/servers/core/coursePhaseType"
 	db "github.com/ls1intum/prompt2/servers/core/db/sqlc"
+	"github.com/ls1intum/prompt2/servers/core/instructorNote"
 	"github.com/ls1intum/prompt2/servers/core/keycloakRealmManager"
 	"github.com/ls1intum/prompt2/servers/core/keycloakTokenVerifier"
 	"github.com/ls1intum/prompt2/servers/core/mailing"
@@ -220,6 +221,7 @@ func main() {
 	courseParticipation.InitCourseParticipationModule(api, *query, conn)
 	coursePhaseParticipation.InitCoursePhaseParticipationModule(api, *query, conn)
 	applicationAdministration.InitApplicationAdministrationModule(api, *query, conn)
+	instructorNote.InitInstructorNoteModule(api, *query, conn)
 
 	serverAddress := utils.GetEnv("SERVER_ADDRESS", "localhost:8080")
 	log.Info("Core Server started")
